Fix layout alignment between map

--- a/css/cafe-list.css
+++ b/css/cafe-list.css
@@ -26,7 +26,9 @@
   width: 100%;
   justify-content: center;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
+
 
 /* Map */
 .cafe-map-box {
